--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,13 @@ spring.jpa.properties.hibernate.format_sql=true
 # Connection Pool Settings (Recommended for production-like setup)
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
+
+# Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.timeout=5000ms
+
+# Optional: Redis Pool Settings
+spring.redis.lettuce.pool.max-active=8
+spring.redis.lettuce.pool.max-idle=8
+spring.redis.lettuce.pool.min-idle=0
