--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 version: '3.8'
+
 services:
+  # ===== DATABASE & CACHE =====
   postgres:
     image: postgres:15-alpine
     container_name: spring-postgres
@@ -19,10 +21,65 @@ services:
     ports:
       - "6379:6379"
     volumes:
-      - redis_data:/data # Added this for persistence
-    command: redis-server --appendonly yes # Add this for AOF
+      - redis_data:/data
+    command: redis-server --appendonly yes
+    restart: unless-stopped
+
+  # ===== KAFKA ECOSYSTEM =====
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.5.0
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: confluentinc/cp-kafka:7.5.0
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+    container_name: kafka-ui
+    depends_on:
+      - kafka
+    ports:
+      - "8081:8080"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+
+  ai-assistant:
+    dns:
+      - 8.8.8.8
+      - 1.1.1.1
+    build: ./ai-assistant
+    container_name: paperclip-ai
+    ports:
+      - "8000:8000"
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - DEEPSEEK_API_KEY=sk-3fd9a840aace41a08440645910208dde
+    depends_on:
+      - kafka
+    volumes:
+      - ./ai-assistant/src:/app/src  # For development hot-reload
+      - ./ai-assistant/requirements.txt:/app/requirements.txt
     restart: unless-stopped
 
 volumes:
   postgres_data:
+  redis_data:
 
