--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,9 +62,8 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
 
   ai-assistant:
-    dns:
-      - 8.8.8.8
-      - 1.1.1.1
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     build: ./ai-assistant
     container_name: paperclip-ai
     ports:
