--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,32 @@ spring.redis.timeout=5000ms
 spring.redis.lettuce.pool.max-active=8
 spring.redis.lettuce.pool.max-idle=8
 spring.redis.lettuce.pool.min-idle=0
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9093
+spring.kafka.consumer.group-id=spring-boot-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.properties.session.timeout.ms=30000
+spring.kafka.consumer.properties.max.poll.interval.ms=300000
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.properties.retries=3
+spring.kafka.producer.properties.acks=all
+spring.kafka.producer.properties.compression.type=snappy
+
+# Custom Kafka Topics
+kafka.topics.user-actions=user-actions
+kafka.topics.ai-responses=ai-responses
+
+# AI Service Configuration
+ai.service.url=${AI_SERVICE_URL:http://localhost:8000}
+ai.service.timeout=5000
+
+# Server Configuration
+server.port=8080
+
+# Logging Configuration
+logging.level.org.springframework.kafka=DEBUG
+logging.level.com.example.movie.kafka=INFO
